2009-06-25  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-render-manager.c (hd_render_manager_set_state):
	  Discard notification previews if we're going to
	  STATE_DISCARD_PREVIEW_NOTE().
	* src/util/hd-util.c (hd_util_client_has_modal_blocker):
	  Don't consider notification previews modal blockers.
	  This allow the tasks button not to be blocked while
	  they're showing.

2009-06-25  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-note.c (hd_note_init)
	* src/util/hd-transition.c (on_notification_timeline_new_frame)

	Place notification preview windows where they're supposed to be
	ie. right to the tasks button.

2009-06-25  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/a11y/home/hda-home.c (_hda_home_next_home_action,
	_hda_home_previous_home_action): Add 0 argument as velocity for
	hd_home_view_container_scroll_to_next/previous to fix compilation.

2009-06-25  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-task-navigator.c (calc_layout):
	  If we have >12 thumbnails position the grid so that the titles of
	  the fourth row can be seen clearly.

	* src/tidy/tidy-scroll-view.c (tidy_scroll_view_init):
	  Force transparent background on the indicators.
	  Maybe it could have been done more elegantly.

	* src/home/hd-task-navigator.c (layout_notwin):
	  Show only the first 3-2 lines of the secondary text.

2009-06-24  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes NB#122222 - X sends a large number of unnecessary Expose events 
	                  on screen rotation to all applications
	* src/mb/hd-atoms.h
	* src/mb/hd-atoms.c: Added _MAEMO_SUPPRESS_ROOT_RECONFIGURATION atom
	* src/util/hd-util.c: Set atom above to 1 around the XRandR calls to 
	  allow fbdev to supress the extra redraw that happens on windows 
	  when rotating the screen.

	* src/home/hd-home.c
	* src/home/hd-home-view-container.c: Misc tweaks to home panning

	Home view kinetic panning

	* src/home/hd-home-view.c